# protheus-mcp

./: .env.example  README.md  pyproject.toml
src/protheus_mcp/: __init__.py  search.py  server.py
tests/: conftest.py  test_server.py
